# opengl_lib_3d_renderer

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake_multi_platform.yml
data/meshes/gun/: gun.gltf
data/meshes/monkey/: test.glb
data/meshes/teapot/: teapot.gltf
data/shaders/: debug_frag.glsl  debug_vertex.glsl  frag.glsl  frag_model.glsl  pbr_frag.glsl  screen_frag.glsl  screen_vertex.glsl  vertex.glsl  vertex_model.glsl
src/: assimp_glm.h  camera.h  main.cpp  mesh_builder.h  model_loader.h  renderer.h  scene_renderer.h  shader_builder.h  stb_image_raii.h  texture_builder.h  utils.h
